--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -76,6 +76,8 @@ $video-color                : #000000;
 $badge-color-hover          : #5d5e5f;*/
 $whitepaper-color           : #3699f3;
 $whitepaper-color-hover     : #63b0f5; 
+$journal-color              : #ff8533;
+$journal-color-hover        : #ffa366; 
 $badge-color                : #26ce10;
 $badge-color-hover          : #2ae112;
 $award-color                : #ffd100;
