--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -215,6 +215,19 @@ savespace {
     }
   }
 
+  &--journal {
+    color: $text-color !important;
+    background-color: mix(#FFF, $journal-color, 60%) !important;
+    border-color: $journal-color !important;
+    padding: 0em 0.3em !important;
+    font-size: $type-size-6;
+
+    &:hover {
+      background-color: mix(#FFF, $journal-color-hover, 60%) !important;
+
+    }
+  }
+
   &--badge {
     color: $text-color !important;
     background-color: mix(#FFF, $badge-color, 60%) !important;
