testing different media coverage div size

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -120,7 +120,7 @@ layout: default
                <div onclick="growDiv(0, '300px')" class="morebutton" id="more-button0">Read more <i class="fas fa-chevron-down"></i></div>
                {% endif %}
                {% if page.press and page.press != "" %}
-               <div class="grow" id="pre1" style="height: 400px">
+               <div class="grow" id="pre1" style="height: fit-content">
                   <div class='measuringWrapper1'>
                      <h2 id="media">Media coverage</h2>
                      {% for item in page.press%}
