added new article, removed share and pagination

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -148,8 +148,8 @@ layout: default
             {% endif %}
             {% include page__taxonomy.html %}
          </footer>
-         {% if page.share %}{% include social-share.html %}{% endif %}
-         {% include post_pagination.html %}
+         <!--{% if page.share %}{% include social-share.html %}{% endif %}
+         {% include post_pagination.html %}-->
       </div>
       {% if site.comments.provider and page.comments %}
       {% include comments.html %}
