--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -141,6 +141,22 @@ savespace {
     }
   }
 
+  /* slides */
+
+  &--slides {
+    color: $slides-color !important;
+    background-color: mix(#FFF, $slides-color, 90%) !important;
+    border-color: $slides-color !important;
+    padding: 0em 0.3em !important;
+    font-size: $type-size-6;
+
+    &:hover {
+      color: mix(#208F20, $slides-color, 70%) !important;
+      background-color: mix(#FFF, $slides-color, 70%) !important;
+    }
+  }
+
+
   /* video */
 
   &--video {
@@ -237,6 +253,19 @@ savespace {
 
     &:hover {
       background-color: mix(#FFF, $badge-color-hover, 60%) !important;
+
+    }
+  }
+
+  &--thesis {
+    color: $text-color !important;
+    background-color: mix(#FFF, $thesis-color, 60%) !important;
+    border-color: $thesis-color !important;
+    padding: 0em 0.3em !important;
+    font-size: $type-size-6;
+
+    &:hover {
+      background-color: mix(#FFF, $thesis-color-hover, 60%) !important;
 
     }
   }
