--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -71,6 +71,7 @@ $pdf-color                  : #ee5f5b;
 $appendix-color             : #cc0099;
 $info-color                 : #0366d6;
 $video-color                : #000000;
+$slides-color               : #C2B280;
 
 /*$badge-color                : #474849;
 $badge-color-hover          : #5d5e5f;*/
@@ -82,6 +83,8 @@ $badge-color                : #26ce10;
 $badge-color-hover          : #2ae112;
 $award-color                : #ffd100;
 $award-color-hover          : #ffdc00;
+$thesis-color               : #8F00FF;
+$thesis-color-hover         : #A020F0;
 
 /* brands */
 $behance-color              : #1769FF;
