--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -151,7 +151,7 @@ savespace {
     font-size: $type-size-6;
 
     &:hover {
-      color: mix(#208F20, $slides-color, 70%) !important;
+      color: mix(#ad9343, $slides-color, 70%) !important;
       background-color: mix(#FFF, $slides-color, 70%) !important;
     }
   }
