--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -83,8 +83,8 @@ $badge-color                : #26ce10;
 $badge-color-hover          : #2ae112;
 $award-color                : #ffd100;
 $award-color-hover          : #ffdc00;
-$thesis-color               : #8F00FF;
-$thesis-color-hover         : #A020F0;
+$thesis-color               : #d119ad;
+$thesis-color-hover         : #f15bd4;
 
 /* brands */
 $behance-color              : #1769FF;
