--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -72,9 +72,9 @@ layout: default
                   {% if page.publisher_link %}<a href="{{ page.open_access_link }}" class="btn btn--pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Publisher PDF</a>{% endif %}-->
                {% if page.open_access_link %}<a href="{{ page.open_access_link }}" target="_blank" class="btn btn--pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>{% endif %}
                {% if page.pre_print_link %}<a href="{{ page.pre_print_link }}" class="btn btn--pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Pre-print</a>{% endif %}
-               {% if page.white_paper_publisher_link %}<a href="{{ page.white_paper_publisher_link }}" class="btn btn--success"><i class="fas fa-external-link-alt" aria-hidden="true"></i> External link</a>{% endif %}
+               {% if page.white_paper_publisher_link %}<a href="{{ page.white_paper_publisher_link }}" class="btn btn--success"><i class="fa-solid fa-arrow-up-right-from-square"></i> External link</a>{% endif %}
                {% if page.database %}<a href="{{ page.database }}" class="btn btn--success"><i class="fa fa-database" aria-hidden="true"></i> Datasets</a>{% endif %}
-               {% if page.slides %}<a href="{{ page.slides }}" class="btn btn--slides"><i class="fas fa-presentation"></i> Slides</a>{% endif %}
+               {% if page.slides %}<a href="{{ page.slides }}" class="btn btn--slides"><i class="fa-solid fa-person-chalkboard"></i> Slides</a>{% endif %}
                {% if page.source %}<a href="{{ page.source }}" class="btn btn--success"><i class="fa fa-code" aria-hidden="true"></i> Source code</a>{% endif %}
                {% if page.video_link %}<a href="{{ page.video_link }}" class="btn btn--video"><i class="fa fa-film" aria-hidden="true"></i> Conference</a>{% endif %}
                {% if page.press %}<a href="#media" class="btn btn--info"><i class="fa fa-newspaper-o" aria-hidden="true"></i> Media coverage</a>{% endif %}
