--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -86,7 +86,7 @@ layout: default
                {% endif %}
                {% if page.exec_summary and page.exec_summary != "" %}
                <h2>Executive Summary</h2>
-               <p style="font-size: 0.85em">{{page.exec_summary}}</p>
+               <p style="font-size: 0.85em; text-align: justify; text-justify: inter-word;">{{page.exec_summary}}</p>
                {% endif %}
                {% if page.main_outcomes and page.main_outcomes != "" %}
                <h2>Main research outcomes</h2>
