--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -79,18 +79,18 @@ layout: default
                {% if page.video_link %}<a href="{{ page.video_link }}" class="btn btn--video"><i class="fa fa-film" aria-hidden="true"></i> Conference</a>{% endif %}
                {% if page.press %}<a href="#media" class="btn btn--info"><i class="fa fa-newspaper-o" aria-hidden="true"></i> Media coverage</a>{% endif %}
             </p>
-            <section class="page__content" itemprop="text">
+            <section class="page__content" style="font-size: 0.85em; text-align: justify; text-justify: inter-word;" itemprop="text">
                {% if page.abstract and page.abstract != "" %}
                <h2>Abstract</h2>
-               <p style="font-size: 0.85em; text-align: justify; text-justify: inter-word;">{{page.abstract}}</p>
+               <p>{{page.abstract}}</p>
                {% endif %}
                {% if page.exec_summary and page.exec_summary != "" %}
                <h2>Executive Summary</h2>
-               <p style="font-size: 0.85em; text-align: justify; text-justify: inter-word;">{{page.exec_summary}}</p>
+               <p>{{page.exec_summary}}</p>
                {% endif %}
                {% if page.main_outcomes and page.main_outcomes != "" %}
                <h2>Main research outcomes</h2>
-               <p style="font-size: 0.85em; text-align: justify; text-justify: inter-word;">{{page.main_outcomes}}</p>
+               <p>{{page.main_outcomes}}</p>
                {% endif %}
 
 
@@ -98,20 +98,20 @@ layout: default
                <div class="grow" id="pre0" style="height: 300px">
                   <div class='measuringWrapper0'>
                      <h2 id="appendix">{{ page.extra_section_title}}</h2>
-                     <p style="font-size: 0.85em; text-align: justify; text-justify: inter-word;">{{page.extra_section_content1}}</p>
+                     <p>{{page.extra_section_content1}}</p>
                      {% if page.extra_section_fig1 and page.extra_section_fig1 != "" %}
                      <img src="{{site.url}}{{page.extra_section_fig1}}" onclick="window.open(this.src)"></img>
                      {% endif %}
                      {% if page.extra_section_content2 and page.extra_section_content2 != "" %}
                      <br/><br/>
-                     <p style="font-size: 0.85em; text-align: justify; text-justify: inter-word;">{{page.extra_section_content2}}</p>
+                     <p>{{page.extra_section_content2}}</p>
                      {% endif %}
                      {% if page.extra_section_fig2 and page.extra_section_fig2 != "" %}
                      <img src="{{site.url}}{{page.extra_section_fig2}}" onclick="window.open(this.src)"></img>
                      {% endif %}
                      {% if page.extra_section_content3 and page.extra_section_content3 != "" %}
                      <br/><br/>
-                     <p style="font-size: 0.85em; text-align: justify; text-justify: inter-word;">{{page.extra_section_content3}}</p>
+                     <p>{{page.extra_section_content3}}</p>
                      {% endif %}
                   </div>
                </div>
@@ -124,7 +124,7 @@ layout: default
                <p style="height: fit-content">
                   <h2 id="media">Media coverage</h2>
                   {% for item in page.press%}
-                  <a style="font-size: 0.85em; " href="{{ item[0] }}">[{% if item[1] == "en"%}<span class="flag-icon flag-icon-gb" style="font-size: 17px"></span>{%elsif item[1] == "nl"%}<span class="flag-icon flag-icon-nl" style="font-size: 17px"></span>{%endif%}] {{ item[2] }}</a><br/>
+                  <a href="{{ item[0] }}">[{% if item[1] == "en"%}<span class="flag-icon flag-icon-gb" style="font-size: 17px"></span>{%elsif item[1] == "nl"%}<span class="flag-icon flag-icon-nl" style="font-size: 17px"></span>{%endif%}] {{ item[2] }}</a><br/>
                   {% endfor %}
                </p>
                {% endif %}
