--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -1,4 +1,4 @@
-/* ==========================================================================
+ /* ==========================================================================
    UTILITY CLASSES
    ========================================================================== */
 
@@ -228,10 +228,10 @@ body:hover .visually-hidden button {
     color: $lastfm-color;
   }
 
-  .fa-linkedin,
+  /*.fa-linkedin,
   .fa-linkedin-square {
     color: $linkedin-color;
-  }
+  }*/
 
   .fa-pinterest,
   .fa-pinterest-p,
