--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -43,7 +43,7 @@ layout: default
       <div class="page__inner-wrap">
          <header>
             {% if page.title %}
-            <h1 class="page__title" itemprop="headline">
+            <h1 class="page__title" style="margin-bottom: 0.1em" itemprop="headline">
                {{ page.title | markdownify | remove: "
                <p>" | remove: "</p>
                " }}
@@ -140,7 +140,7 @@ layout: default
             <p>Recommended citation: {{ page.citation }} </p>
             {% endif %}
          </header>
-         <section class="page__content" itemprop="text">
+         <section class="page__content" style="text-align: justify; text-justify: inter-word;" itemprop="text">
             {{ content }}
          </section>
          <footer class="page__meta">
