--- a/_includes/cookie-consent.html
+++ b/_includes/cookie-consent.html
@@ -7,8 +7,8 @@
     }
 </style>
 <div id="cookie-notice"><span>I would like to use third party cookies and scripts to know where you're connecting from. No ads, no targeting, no reselling info, I promise! ✌️ </span>
-    <a id="cookie-notice-accept" class="btn btn-primary btn-sm">Approve</a>
-    <a id="cookie-notice-deny" class="btn btn-primary btn-sm">Deny</a>
+    <a id="cookie-notice-accept" class="btn btn--inverse">Approve</a>
+    <a id="cookie-notice-deny" class="btn btn--inverse">Deny</a>
     <!--<a href="/privacy" class="btn btn-primary btn-sm">More info</a></div>-->
 <script>
     function createCookie(name,value,days) {
