--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -113,6 +113,28 @@
 }
 
 
+.list__item_ttp {
+  @include breakpoint($medium) {
+    padding-right: $right-sidebar-width-narrow;
+    padding-left: 10px;
+    margin-bottom: 8px;
+  }
+
+  @include breakpoint($large) {
+    padding-right: $right-sidebar-width;
+  }
+
+  @include breakpoint($x-large) {
+    padding-right: $right-sidebar-width-wide;
+  }
+
+  .page__meta {
+    margin: 0 0 4px;
+  }
+}
+
+
+
 /*
    Grid view
    ========================================================================== */
