--- a/_includes/archive_ttp.html
+++ b/_includes/archive_ttp.html
@@ -13,7 +13,7 @@
 {% endif %}-->
 
 <div class="{{ include.type | default: "list" }}__item_ttp">
-    <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
+    <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork" style="padding-bottom: 10px;">
       {% if include.type == "grid" and teaser %}
         <div class="archive__item-teaser">
           <img src=
